--- a/.gitignore
+++ b/.gitignore
@@ -192,7 +192,8 @@ FakesAssemblies/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -220,3 +221,5 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 FitabaseWeb/ConnectionStrings.Release.xml
+/packages/
+/.vs/
