--- a/Azure.ApiManagement.Console/Azure.ApiManagement.Console.csproj
+++ b/Azure.ApiManagement.Console/Azure.ApiManagement.Console.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Azure.ApiManagement.Client\Azure.ApiManagement.Client.csproj">
+      <Project>{e8ef2d86-aead-4d44-9909-0e5b2641a139}</Project>
+      <Name>Azure.ApiManagement.Client</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
