Implementation and tests for User operations - create & get SSO url

--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -51,9 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiManagementClient.cs" />
-    <Compile Include="DataModel\Exceptions\InvalidProductException.cs" />
+    <Compile Include="DataModel\Exceptions\InvalidEntityException.cs" />
     <Compile Include="DataModel\Model\Enums.cs" />
     <Compile Include="DataModel\Model\SsoUrl.cs" />
+    <Compile Include="DataModel\Model\User.cs" />
     <Compile Include="DataModel\Result\EntityCollection.cs" />
     <Compile Include="DataModel\Model\Group.cs" />
     <Compile Include="DataModel\Model\API.cs" />
