Implementation and tests added for Product/User Subscriptions support

--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DataModel\Exceptions\InvalidEntityException.cs" />
     <Compile Include="DataModel\Model\Enums.cs" />
     <Compile Include="DataModel\Model\SsoUrl.cs" />
+    <Compile Include="DataModel\Model\Subscription.cs" />
     <Compile Include="DataModel\Model\User.cs" />
     <Compile Include="DataModel\Result\EntityCollection.cs" />
     <Compile Include="DataModel\Model\Group.cs" />
