--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -50,7 +50,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiManagementClient.cs" />
     <Compile Include="DataModel\Exceptions\InvalidEntityException.cs" />
     <Compile Include="DataModel\Model\Enums.cs" />
     <Compile Include="DataModel\Model\SsoUrl.cs" />
@@ -61,8 +60,8 @@
     <Compile Include="DataModel\Model\API.cs" />
     <Compile Include="DataModel\Abstract\EntityBase.cs" />
     <Compile Include="DataModel\Exceptions\HttpResponseException.cs" />
-    <Compile Include="Services\ManagementClient.cs" />
-    <Compile Include="Services\ClientBase.cs" />
+    <Compile Include="ClientProxy\ManagementClient.cs" />
+    <Compile Include="ClientProxy\ClientBase.cs" />
     <Compile Include="DataModel\Model\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Constants.cs" />
