--- a/nuget/Azure.APIMClient.nuspec
+++ b/nuget/Azure.APIMClient.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Fitbit.NET.OAuth1Migration</id>
+    <id>Azure.APIM</id>
     <version>1.0.0-beta-build$buildNumber$</version>
     <title>Azure APIM Client</title>
     <authors>Azure APIM Client</authors>
