--- a/nuget/Azure.APIMClient.nuspec
+++ b/nuget/Azure.APIMClient.nuspec
@@ -18,6 +18,7 @@
     <tags>Azure APIM</tags>
     <dependencies>
 	  <dependency id="Newtonsoft.Json" version="8.0.2" />
+      <dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.3"/>
     </dependencies>
   </metadata>
   <files>
