--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -51,10 +51,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientProxy\BaseUrls.cs" />
+    <Compile Include="ClientProxy\FitabaseApiClient.cs" />
+    <Compile Include="DataModel\Error.cs" />
+    <Compile Include="DataModel\Model\Certificate.cs" />
+    <Compile Include="DataModel\Model\FitabaseCollection.cs" />
     <Compile Include="DataModel\Exceptions\InvalidEntityException.cs" />
     <Compile Include="DataModel\Model\Enums.cs" />
+    <Compile Include="DataModel\Model\Logger.cs" />
+    <Compile Include="DataModel\Model\Property.cs" />
+    <Compile Include="DataModel\Model\Report.cs" />
     <Compile Include="DataModel\Model\SsoUrl.cs" />
     <Compile Include="DataModel\Model\Subscription.cs" />
+    <Compile Include="DataModel\Model\Tenant.cs" />
     <Compile Include="DataModel\Model\User.cs" />
     <Compile Include="DataModel\Result\EntityCollection.cs" />
     <Compile Include="DataModel\Model\Group.cs" />
@@ -66,7 +75,9 @@
     <Compile Include="DataModel\Model\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Constants.cs" />
+    <Compile Include="Utilities\PrintMessage.cs" />
     <Compile Include="Utilities\Utility.cs" />
+    <Compile Include="Utilities\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
