--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -188,6 +188,13 @@
     <Compile Include="ClientProxy\ManagementClient.cs" />
     <Compile Include="DataModel\Model\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Swagger\PathData.cs" />
+    <Compile Include="Swagger\Post.cs" />
+    <Compile Include="Swagger\SwaggerApiCaster.cs" />
+    <Compile Include="Swagger\SwaggerInfo.cs" />
+    <Compile Include="Swagger\SwaggerObject.cs" />
+    <Compile Include="Swagger\SwaggerParser.cs" />
+    <Compile Include="Swagger\SwaggerResponse.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\PrintMessage.cs" />
     <Compile Include="Utilities\Utility.cs" />
