--- a/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
+++ b/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DataModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ManagementClientTests.cs" />
+    <Compile Include="SwaggerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Azure.ApiManagement.Client\Azure.ApiManagement.Client.csproj">
@@ -66,6 +67,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="SwaggerObject.json" />
     <None Include="APIMKeys.BLANK.json" />
     <None Include="APIMKeys.json" />
     <None Include="app.config" />
