Create Swagger components, fix Azure API objects

--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -191,12 +191,29 @@
     <Compile Include="ClientProxy\ManagementClient.cs" />
     <Compile Include="DataModel\Model\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Swagger\Contact.cs" />
+    <Compile Include="Swagger\Definition.cs" />
+    <Compile Include="Swagger\Example.cs" />
+    <Compile Include="Swagger\ExternalDocs.cs" />
+    <Compile Include="Swagger\Header.cs" />
+    <Compile Include="Swagger\Info.cs" />
     <Compile Include="Swagger\ISwaggerFileReader.cs" />
-    <Compile Include="Swagger\SwaggerAPIComposer.cs" />
-    <Compile Include="Swagger\SwaggerConfiguration.cs" />
-    <Compile Include="Swagger\SwaggerJsonFileReader.cs" />
-    <Compile Include="Swagger\SwaggerObject.cs" />
-    <Compile Include="Swagger\SwaggerParser.cs" />
+    <Compile Include="Swagger\APIComposer.cs" />
+    <Compile Include="Swagger\Item.cs" />
+    <Compile Include="Swagger\License.cs" />
+    <Compile Include="Swagger\OperationMethod.cs" />
+    <Compile Include="Swagger\Parameter.cs" />
+    <Compile Include="Swagger\PathData.cs" />
+    <Compile Include="Swagger\Response.cs" />
+    <Compile Include="Swagger\Schema.cs" />
+    <Compile Include="Swagger\Scope.cs" />
+    <Compile Include="Swagger\Security.cs" />
+    <Compile Include="Swagger\SecurityDefinitions.cs" />
+    <Compile Include="Swagger\JsonFileReader.cs" />
+    <Compile Include="Swagger\SecurityScheme.cs" />
+    <Compile Include="Swagger\SwaggerAPIComponent.cs" />
+    <Compile Include="Swagger\Tag.cs" />
+    <Compile Include="Swagger\Xml.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\PrintMessage.cs" />
     <Compile Include="Utilities\Utility.cs" />
