--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -168,7 +168,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientProxy\APIPubliser.cs" />
+    <Compile Include="ClientProxy\Configuration.cs" />
     <Compile Include="DataModel\Abstract\EntityIdGenerator.cs" />
+    <Compile Include="DataModel\Abstract\UpdateEntityBase.cs" />
+    <Compile Include="DataModel\Exceptions\SwaggerComponentException.cs" />
     <Compile Include="DataModel\FormParameter.cs" />
     <Compile Include="DataModel\Header.cs" />
     <Compile Include="DataModel\OperationResponse.cs" />
