Convert URL contents to Swagger Components

--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -171,7 +171,7 @@
     <Compile Include="ClientProxy\Configuration.cs" />
     <Compile Include="DataModel\Abstract\EntityIdGenerator.cs" />
     <Compile Include="DataModel\Abstract\UpdateEntityBase.cs" />
-    <Compile Include="DataModel\Exceptions\SwaggerComponentException.cs" />
+    <Compile Include="DataModel\Exceptions\SwaggerResourceException.cs" />
     <Compile Include="DataModel\FormParameter.cs" />
     <Compile Include="DataModel\Header.cs" />
     <Compile Include="DataModel\OperationResponse.cs" />
@@ -199,29 +199,30 @@
     <Compile Include="DataModel\Model\Product.cs" />
     <Compile Include="DataModel\TemplateParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Swagger\Contact.cs" />
-    <Compile Include="Swagger\Definition.cs" />
-    <Compile Include="Swagger\Example.cs" />
-    <Compile Include="Swagger\ExternalDocs.cs" />
-    <Compile Include="Swagger\Header.cs" />
-    <Compile Include="Swagger\Info.cs" />
-    <Compile Include="Swagger\ISwaggerFileReader.cs" />
+    <Compile Include="Swagger\Models\Contact.cs" />
+    <Compile Include="Swagger\Models\Definition.cs" />
+    <Compile Include="Swagger\Models\Example.cs" />
+    <Compile Include="Swagger\Models\ExternalDocs.cs" />
+    <Compile Include="Swagger\Models\Header.cs" />
+    <Compile Include="Swagger\Models\Info.cs" />
+    <Compile Include="Swagger\AbstractSwaggerReader.cs" />
     <Compile Include="Swagger\APIComposer.cs" />
-    <Compile Include="Swagger\Item.cs" />
-    <Compile Include="Swagger\License.cs" />
-    <Compile Include="Swagger\OperationMethod.cs" />
-    <Compile Include="Swagger\Parameter.cs" />
-    <Compile Include="Swagger\PathData.cs" />
-    <Compile Include="Swagger\Response.cs" />
-    <Compile Include="Swagger\Schema.cs" />
-    <Compile Include="Swagger\Scope.cs" />
-    <Compile Include="Swagger\Security.cs" />
-    <Compile Include="Swagger\SecurityDefinitions.cs" />
+    <Compile Include="Swagger\Models\Item.cs" />
+    <Compile Include="Swagger\Models\License.cs" />
+    <Compile Include="Swagger\Models\OperationMethod.cs" />
+    <Compile Include="Swagger\Models\Parameter.cs" />
+    <Compile Include="Swagger\Models\PathData.cs" />
+    <Compile Include="Swagger\Models\Response.cs" />
+    <Compile Include="Swagger\Models\Schema.cs" />
+    <Compile Include="Swagger\Models\Scope.cs" />
+    <Compile Include="Swagger\Models\Security.cs" />
+    <Compile Include="Swagger\Models\SecurityDefinitions.cs" />
     <Compile Include="Swagger\JsonFileReader.cs" />
-    <Compile Include="Swagger\SecurityScheme.cs" />
-    <Compile Include="Swagger\SwaggerAPIComponent.cs" />
-    <Compile Include="Swagger\Tag.cs" />
-    <Compile Include="Swagger\Xml.cs" />
+    <Compile Include="Swagger\Models\SecurityScheme.cs" />
+    <Compile Include="Swagger\Models\SwaggerAPIComponent.cs" />
+    <Compile Include="Swagger\Models\Tag.cs" />
+    <Compile Include="Swagger\UrlContentReader.cs" />
+    <Compile Include="Swagger\Models\Xml.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\PrintMessage.cs" />
     <Compile Include="Utilities\Utility.cs" />
