--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -168,7 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientProxy\APIPubliser.cs" />
-    <Compile Include="ClientProxy\Configuration.cs" />
+    <Compile Include="ClientProxy\APIConfiguration.cs" />
     <Compile Include="DataModel\Abstract\EntityIdGenerator.cs" />
     <Compile Include="DataModel\Abstract\UpdateEntityBase.cs" />
     <Compile Include="DataModel\Exceptions\SwaggerResourceException.cs" />
@@ -200,10 +200,10 @@
     <Compile Include="DataModel\TemplateParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Swagger\Models\Contact.cs" />
-    <Compile Include="Swagger\Models\Definition.cs" />
     <Compile Include="Swagger\Models\Example.cs" />
-    <Compile Include="Swagger\Models\ExternalDocs.cs" />
+    <Compile Include="Swagger\Models\ExternalDoc.cs" />
     <Compile Include="Swagger\Models\Header.cs" />
+    <Compile Include="Swagger\Models\Headers.cs" />
     <Compile Include="Swagger\Models\Info.cs" />
     <Compile Include="Swagger\AbstractSwaggerReader.cs" />
     <Compile Include="Swagger\APIComposer.cs" />
@@ -212,16 +212,15 @@
     <Compile Include="Swagger\Models\OperationMethod.cs" />
     <Compile Include="Swagger\Models\Parameter.cs" />
     <Compile Include="Swagger\Models\PathData.cs" />
+    <Compile Include="Swagger\Models\Property.cs" />
     <Compile Include="Swagger\Models\Response.cs" />
+    <Compile Include="Swagger\Models\Responses.cs" />
     <Compile Include="Swagger\Models\Schema.cs" />
-    <Compile Include="Swagger\Models\Scope.cs" />
-    <Compile Include="Swagger\Models\Security.cs" />
     <Compile Include="Swagger\Models\SecurityDefinitions.cs" />
-    <Compile Include="Swagger\JsonFileReader.cs" />
-    <Compile Include="Swagger\Models\SecurityScheme.cs" />
-    <Compile Include="Swagger\Models\SwaggerAPIComponent.cs" />
+    <Compile Include="Swagger\SwaggerFileReader.cs" />
+    <Compile Include="Swagger\Models\SwaggerObject.cs" />
     <Compile Include="Swagger\Models\Tag.cs" />
-    <Compile Include="Swagger\UrlContentReader.cs" />
+    <Compile Include="Swagger\SwaggerUrlReader.cs" />
     <Compile Include="Swagger\Models\Xml.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\PrintMessage.cs" />
