--- a/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
+++ b/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
@@ -73,6 +73,7 @@
     <None Include="APIMKeys.json" />
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="SwaggerResult.json" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
