--- a/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
+++ b/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
@@ -56,7 +56,6 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DataModelTests.cs" />
-    <Compile Include="ModelErrorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ManagementClientTests.cs" />
     <Compile Include="SwaggerTest.cs" />
@@ -73,6 +72,7 @@
     <None Include="APIMKeys.json" />
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="SwaggerPath.json" />
     <None Include="SwaggerResult.json" />
   </ItemGroup>
   <Choose>
@@ -95,6 +95,11 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties SwaggerObject_1json__JSONSchema="http://json.schemastore.org/csscomb" />
+    </VisualStudio>
+  </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
