--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -167,14 +167,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientProxy\APIPubliser.cs" />
+    <Compile Include="ClientProxy\APIPublisher.cs" />
     <Compile Include="ClientProxy\APIConfiguration.cs" />
+    <Compile Include="ClientProxy\APISetting.cs" />
     <Compile Include="DataModel\Abstract\EntityIdGenerator.cs" />
     <Compile Include="DataModel\Abstract\UpdateEntityBase.cs" />
     <Compile Include="DataModel\Exceptions\SwaggerResourceException.cs" />
-    <Compile Include="DataModel\FormParameter.cs" />
-    <Compile Include="DataModel\Header.cs" />
-    <Compile Include="DataModel\OperationResponse.cs" />
+    <Compile Include="DataModel\ResponseContract.cs" />
     <Compile Include="DataModel\Properties\Documents.cs" />
     <Compile Include="DataModel\Properties\ParameterType.cs" />
     <Compile Include="DataModel\Exceptions\InvalidEntityException.cs" />
@@ -187,8 +186,7 @@
     <Compile Include="DataModel\Model\Tenant.cs" />
     <Compile Include="DataModel\Model\User.cs" />
     <Compile Include="DataModel\Properties\RequestMethod.cs" />
-    <Compile Include="DataModel\QueryParameter.cs" />
-    <Compile Include="DataModel\Representation.cs" />
+    <Compile Include="DataModel\RepresentationContract.cs" />
     <Compile Include="DataModel\RequestContract.cs" />
     <Compile Include="DataModel\Result\EntityCollection.cs" />
     <Compile Include="DataModel\Model\Group.cs" />
@@ -197,7 +195,7 @@
     <Compile Include="DataModel\Exceptions\HttpResponseException.cs" />
     <Compile Include="ClientProxy\ManagementClient.cs" />
     <Compile Include="DataModel\Model\Product.cs" />
-    <Compile Include="DataModel\TemplateParameter.cs" />
+    <Compile Include="DataModel\ParameterContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Swagger\Models\Contact.cs" />
     <Compile Include="Swagger\Models\Example.cs" />
@@ -205,7 +203,7 @@
     <Compile Include="Swagger\Models\Header.cs" />
     <Compile Include="Swagger\Models\Info.cs" />
     <Compile Include="Swagger\AbstractSwaggerReader.cs" />
-    <Compile Include="Swagger\APIComposer.cs" />
+    <Compile Include="ClientProxy\APIComposer.cs" />
     <Compile Include="Swagger\Models\Item.cs" />
     <Compile Include="Swagger\Models\License.cs" />
     <Compile Include="Swagger\Models\OperationMethod.cs" />
@@ -221,6 +219,7 @@
     <Compile Include="Swagger\Models\Tag.cs" />
     <Compile Include="Swagger\SwaggerUrlReader.cs" />
     <Compile Include="Swagger\Models\Xml.cs" />
+    <Compile Include="Utilities\APIBuilder.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\PrintMessage.cs" />
     <Compile Include="Utilities\Utility.cs" />
