//TODO Add Logger entity

--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -173,6 +173,7 @@
     <Compile Include="DataModel\Abstract\EntityIdGenerator.cs" />
     <Compile Include="DataModel\Abstract\UpdateEntityBase.cs" />
     <Compile Include="DataModel\Exceptions\SwaggerResourceException.cs" />
+    <Compile Include="DataModel\Model\Logger.cs" />
     <Compile Include="DataModel\ResponseContract.cs" />
     <Compile Include="DataModel\Properties\Documents.cs" />
     <Compile Include="DataModel\Properties\ParameterType.cs" />
