--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -195,28 +195,12 @@
     <Compile Include="DataModel\Model\Product.cs" />
     <Compile Include="DataModel\ParameterContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Swagger\Models\Contact.cs" />
-    <Compile Include="Swagger\Models\Example.cs" />
-    <Compile Include="Swagger\Models\ExternalDoc.cs" />
-    <Compile Include="Swagger\Models\Header.cs" />
-    <Compile Include="Swagger\Models\Info.cs" />
+    <Compile Include="Swagger\JsonCreationConverter.cs" />
     <Compile Include="Swagger\AbstractSwaggerReader.cs" />
     <Compile Include="ClientProxy\APIBuilder.cs" />
-    <Compile Include="Swagger\Models\Item.cs" />
-    <Compile Include="Swagger\Models\License.cs" />
-    <Compile Include="Swagger\Models\OperationMethod.cs" />
-    <Compile Include="Swagger\Models\Parameter.cs" />
-    <Compile Include="Swagger\Models\PathData.cs" />
-    <Compile Include="Swagger\Models\Property.cs" />
-    <Compile Include="Swagger\Models\Response.cs" />
-    <Compile Include="Swagger\Models\Schema.cs" />
-    <Compile Include="Swagger\Models\Security.cs" />
-    <Compile Include="Swagger\Models\SecurityDefinitions.cs" />
+    <Compile Include="Swagger\ParameterConverter.cs" />
     <Compile Include="Swagger\SwaggerFileReader.cs" />
-    <Compile Include="Swagger\Models\SwaggerObject.cs" />
-    <Compile Include="Swagger\Models\Tag.cs" />
     <Compile Include="Swagger\SwaggerUrlReader.cs" />
-    <Compile Include="Swagger\Models\Xml.cs" />
     <Compile Include="ClientProxy\APISwaggerBuilder.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\Utility.cs" />
