--- a/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
+++ b/Azure.ApiManagement.Client/Azure.ApiManagement.Client.csproj
@@ -167,6 +167,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientProxy\ParameterBuilder.cs" />
     <Compile Include="DataModel\Abstract\EntityIdGenerator.cs" />
     <Compile Include="DataModel\Exceptions\SwaggerResourceException.cs" />
     <Compile Include="DataModel\Model\Logger.cs" />
@@ -199,6 +200,7 @@
     <Compile Include="Swagger\AbstractSwaggerReader.cs" />
     <Compile Include="ClientProxy\APIBuilder.cs" />
     <Compile Include="Swagger\ParameterConverter.cs" />
+    <Compile Include="Swagger\SchemeSecurityConverter.cs" />
     <Compile Include="Swagger\SwaggerFileReader.cs" />
     <Compile Include="Swagger\SwaggerUrlReader.cs" />
     <Compile Include="ClientProxy\APISwaggerBuilder.cs" />
