--- a/Azure.ApiManagement.Client/packages.config
+++ b/Azure.ApiManagement.Client/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Authorization" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.0.0" targetFramework="net452" />
@@ -34,8 +35,8 @@
   <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.WebEncoders" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Http.Headers" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="Swashbuckle.Swagger" version="6.0.0-beta902" targetFramework="net452" />
   <package id="System.Buffers" version="4.0.0" targetFramework="net452" />
   <package id="System.Collections" version="4.0.11" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
