Copy APIMKeys.json to output dir and remove hard-coded paths

--- a/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
+++ b/Azure.ApiManagement.Test/Azure.ApiManagement.Test.csproj
@@ -70,7 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="APIMKeys.BLANK.json" />
-    <None Include="APIMKeys.json" />
+    <None Include="APIMKeys.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
